feat: force enable Code Scanning with enhanced CodeQL configuration

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -150,12 +150,15 @@ jobs:
         uses: github/codeql-action/init@v3
         with:
           languages: javascript
+          config-file: ./.github/codeql/codeql-config.yml
 
       - name: Autobuild
         uses: github/codeql-action/autobuild@v3
 
       - name: Run CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+        with:
+          category: '/language:javascript'
 
   notification:
     name: Notify Status
