feat: complete authentication system and comprehensive documentation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-typescript-starter",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "🚀 Production-ready Express.js API boilerplate built with TypeScript, MongoDB, Jest testing, GitHub Actions CI/CD, and Docker. Enterprise-grade security and architecture.",
   "main": "dist/server.js",
   "repository": {
@@ -52,11 +52,20 @@
     "docker:up": "docker-compose up",
     "docker:down": "docker-compose down",
     "docker:dev": "docker-compose up --build",
-    "prepare": "husky"
+    "prepare": "husky",
+    "validate": "node scripts/validate-code-quality.js",
+    "ci": "npm run lint:check && npm run type-check && npm run test:ci && npm run validate",
+    "deploy:build": "node scripts/deploy.js build",
+    "deploy:prod": "node scripts/deploy.js deploy production",
+    "deploy:staging": "node scripts/deploy.js deploy staging",
+    "deploy:health": "node scripts/deploy.js health",
+    "clean:cache": "scripts\\clean-vscode-cache.bat",
+    "clean:all": "npm run clean && npm run clean:cache"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -65,6 +74,7 @@
     "i18next": "^25.3.2",
     "i18next-fs-backend": "^2.6.0",
     "i18next-http-middleware": "^3.8.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
     "winston": "^3.17.0",
@@ -74,10 +84,12 @@
     "@eslint/js": "^9.32.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.8.1",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/i18next": "^12.1.0",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.2.0",
