--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,6 +9,8 @@ on:
 permissions:
   contents: read
   actions: read
+  checks: write
+  pull-requests: write
 
 jobs:
   test:
@@ -44,17 +46,20 @@ jobs:
         run: npm ci
 
       - name: Run linting
-        run: npm run lint
+        run: npm run lint:check
 
       - name: Run type checking
         run: npm run type-check
 
       - name: Run tests
-        run: npm run test:coverage
+        run: npm run test:ci
         env:
           NODE_ENV: test
           MONGODB_URI: mongodb://localhost:27017/express-ts-test
           JWT_SECRET: test-jwt-secret-key-for-ci-cd
+
+      - name: Run code quality validation
+        run: npm run validate
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
@@ -95,16 +100,24 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, docker-build]
     if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
-    environment: staging
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
       - name: Deploy to Staging
         run: |
           echo "🚀 Deploying to staging environment..."
-          echo "This would deploy to your staging server"
+          npm run deploy:staging
           # Add your staging deployment commands here
 
   deploy-production:
@@ -112,16 +125,24 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, docker-build]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    environment: production
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
       - name: Deploy to Production
         run: |
           echo "🚀 Deploying to production environment..."
-          echo "This would deploy to your production server"
+          npm run deploy:prod
           # Add your production deployment commands here
 
   security-scan:
