🚀 Release v0.1.0: Contextual logging architecture & complete standards compliance

--- a/.env.example
+++ b/.env.example
@@ -5,24 +5,29 @@ PORT=3000
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/express-ts-app
 
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters-long
+
 # Internationalization
 DEFAULT_LANGUAGE=en
+
+# Email Configuration (Resend)
+RESEND_API_KEY=re_your_resend_api_key_here
+EMAIL_FROM=noreply@yourdomain.com
+EMAIL_FROM_NAME=Express TypeScript Starter
+EMAIL_REPLY_TO=support@yourdomain.com
+EMAIL_SUPPORT=support@yourdomain.com
+FRONTEND_URL=http://localhost:3000
+APP_NAME=Express TypeScript Starter
 
 # Optional Configuration
 # API_KEY=your_api_key_here
 # REDIS_URL=redis://localhost:6379
 
 # JWT (for future auth implementation)
-# JWT_SECRET=your-super-secret-jwt-key
 # JWT_EXPIRES_IN=7d
 # JWT_REFRESH_SECRET=your-refresh-token-secret
 # JWT_REFRESH_EXPIRES_IN=30d
-
-# Email Configuration (for future implementation)
-# SMTP_HOST=smtp.gmail.com
-# SMTP_PORT=587
-# SMTP_USER=your-email@gmail.com
-# SMTP_PASS=your-email-password
 
 # Logging Configuration
 # LOG_LEVEL=info
