--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-typescript-starter",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "🚀 Production-ready Express.js API boilerplate built with TypeScript, MongoDB, Jest testing, GitHub Actions CI/CD, and Docker. Enterprise-grade security and architecture.",
   "main": "dist/server.js",
   "repository": {
@@ -77,6 +77,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
+    "resend": "^6.0.1",
     "winston": "^3.17.0",
     "zod": "^4.0.15"
   },
@@ -93,6 +94,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.2.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
