--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-typescript-starter",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "🚀 Production-ready Express.js API boilerplate built with TypeScript, MongoDB, Jest testing, GitHub Actions CI/CD, and Docker. Enterprise-grade security and architecture.",
   "main": "dist/server.js",
   "repository": {
@@ -34,6 +34,7 @@
     "dev": "nodemon",
     "dev:en": "cross-env DEFAULT_LANGUAGE=en nodemon",
     "dev:fr": "cross-env DEFAULT_LANGUAGE=fr nodemon",
+    "dev:setup": "npm run clean:all && npm install && npm run build && npm run test",
     "clean": "rimraf dist",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
@@ -47,6 +48,7 @@
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
     "test:verbose": "jest --verbose",
+    "test:admin": "node scripts/test-admin-endpoints.js",
     "docker:build": "docker build -t express-typescript-starter .",
     "docker:run": "docker run -p 3000:3000 express-typescript-starter",
     "docker:up": "docker-compose up",
@@ -60,7 +62,11 @@
     "deploy:staging": "node scripts/deploy.js deploy staging",
     "deploy:health": "node scripts/deploy.js health",
     "clean:cache": "scripts\\clean-vscode-cache.bat",
-    "clean:all": "npm run clean && npm run clean:cache"
+    "clean:all": "npm run clean && npm run clean:cache",
+    "version:patch": "npm version patch && git push && git push --tags",
+    "version:minor": "npm version minor && git push && git push --tags",
+    "version:major": "npm version major && git push && git push --tags",
+    "release:ready": "npm run ci && npm run build"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
