--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lint:check": "eslint . --ext .ts --max-warnings 0",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "format:fix": "prettier --write . && eslint . --ext .ts --fix",
+    "format:all": "prettier --write . && eslint . --ext .ts --fix",
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -51,9 +51,8 @@
     "test:admin": "node scripts/test-admin-endpoints.js",
     "docker:build": "docker build -t express-typescript-starter .",
     "docker:run": "docker run -p 3000:3000 express-typescript-starter",
-    "docker:up": "docker-compose up",
-    "docker:down": "docker-compose down",
     "docker:dev": "docker-compose up --build",
+    "docker:down": "docker-compose down",
     "prepare": "husky",
     "validate": "node scripts/validate-code-quality.js",
     "ci": "npm run lint:check && npm run type-check && npm run test:ci && npm run validate",
@@ -63,9 +62,10 @@
     "deploy:health": "node scripts/deploy.js health",
     "clean:cache": "scripts\\clean-vscode-cache.bat",
     "clean:all": "npm run clean && npm run clean:cache",
-    "version:patch": "npm version patch && git push && git push --tags",
-    "version:minor": "npm version minor && git push && git push --tags",
-    "version:major": "npm version major && git push && git push --tags",
+    "version:patch": "npm version patch && npm run push:tags",
+    "version:minor": "npm version minor && npm run push:tags",
+    "version:major": "npm version major && npm run push:tags",
+    "push:tags": "git push && git push --tags",
     "release:ready": "npm run ci && npm run build"
   },
   "dependencies": {
@@ -83,12 +83,13 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "resend": "^6.0.1",
+    "sharp": "^0.34.3",
     "winston": "^3.17.0",
     "zod": "^4.0.15"
   },
   "devDependencies": {
-    "@eslint/js": "^9.32.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
@@ -97,10 +98,9 @@
     "@types/i18next": "^12.1.0",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.2.0",
-    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
