📦 v0.2.1: Complete project reorganization and documentation update
✨ Major improvements:
- 📁 Reorganized personal tools to .personal/ (private)
- 🗂️ Moved postman collection to docs/postman/
- 📚 Updated all documentation with new structure
- 🧹 Cleaned public scripts directory
- 🔒 Added .personal/ to .gitignore for privacy
- ✅ All references updated and validated

🎯 Ready for public repository deployment

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,11 @@ EMAIL_SUPPORT=support@yourdomain.com
 FRONTEND_URL=http://localhost:3000
 APP_NAME=Express TypeScript Starter
 
+# Avatar Configuration (DiceBear Integration)
+DEFAULT_AVATAR_PROVIDER=dicebear
+DEFAULT_AVATAR_STYLE=avataaars
+DEFAULT_AVATAR_BASE_URL=https://api.dicebear.com/7.x
+
 # Optional Configuration
 # API_KEY=your_api_key_here
 # REDIS_URL=redis://localhost:6379
