--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
     "test:verbose": "jest --verbose",
-    "test:admin": "node scripts/test-admin-endpoints.js",
     "docker:build": "docker build -t express-typescript-starter .",
     "docker:run": "docker run -p 3000:3000 express-typescript-starter",
     "docker:dev": "docker-compose up --build",
@@ -60,8 +59,7 @@
     "deploy:prod": "node scripts/deploy.js deploy production",
     "deploy:staging": "node scripts/deploy.js deploy staging",
     "deploy:health": "node scripts/deploy.js health",
-    "clean:cache": "scripts\\clean-vscode-cache.bat",
-    "clean:all": "npm run clean && npm run clean:cache",
+    "clean:all": "npm run clean",
     "version:patch": "npm version patch && npm run push:tags",
     "version:minor": "npm version minor && npm run push:tags",
     "version:major": "npm version major && npm run push:tags",
