🔄 Update repository references to new GitHub organization
✨ Complete URL migration:
- 📝 Updated all GitHub links in documentation
- 🏷️ Updated repository URL in package.json
- 🐳 Fixed Docker image names in scripts
- 🧹 Cleaned up personal files that reappeared
- 🔗 All badges and links now point to shuntps-devs/express-ts-api-starter

🎯 Ready for fresh deployment to new public repository

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "express-typescript-starter",
+  "name": "express-ts-api-starter",
   "version": "0.2.1",
-  "description": "🚀 Production-ready Express.js API boilerplate built with TypeScript, MongoDB, Jest testing, GitHub Actions CI/CD, and Docker. Enterprise-grade security and architecture.",
+  "description": "🚀 Production-ready Express.js API boilerplate with TypeScript, MongoDB, JWT auth, avatar uploads, comprehensive testing suite (249 tests), Docker support, and automated CI/CD. Enterprise-grade security included. ⚡ Ready in 2 minutes!",
   "main": "dist/server.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/shuntps/express-typescript-starter.git"
+    "url": "https://github.com/shuntps-devs/express-ts-api-starter.git"
   },
   "author": "shuntps",
   "license": "MIT",
@@ -13,18 +13,23 @@
     "express",
     "typescript",
     "nodejs",
+    "api",
+    "boilerplate",
+    "starter-template",
     "mongodb",
-    "jest",
+    "jwt-authentication",
     "docker",
     "ci-cd",
     "github-actions",
-    "api",
-    "boilerplate",
-    "starter",
-    "production",
+    "production-ready",
+    "enterprise",
     "security",
+    "testing",
+    "jest",
+    "avatar-upload",
     "i18n",
-    "winston"
+    "rest-api",
+    "backend"
   ],
   "scripts": {
     "build": "tsc",
@@ -48,8 +53,8 @@
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
     "test:verbose": "jest --verbose",
-    "docker:build": "docker build -t express-typescript-starter .",
-    "docker:run": "docker run -p 3000:3000 express-typescript-starter",
+    "docker:build": "docker build -t express-ts-api-starter .",
+    "docker:run": "docker run -p 3000:3000 express-ts-api-starter",
     "docker:dev": "docker-compose up --build",
     "docker:down": "docker-compose down",
     "prepare": "husky",
