refactor(docker): move Dockerfile and docker-compose.yml to backend/ folder and update paths for consistency

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -97,7 +97,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t express-ts-app:test -f Dockerfile .
+          docker build -t express-ts-app:test -f backend/Dockerfile backend
 
       - name: Test Docker image
         run: |
