--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,14 +4,14 @@ services:
   # Application service
   app:
     build:
-      context: ./backend
+      context: .
       target: development
     container_name: express-ts-app-dev
     ports:
       - '3000:3000'
     volumes:
-      - ./backend:/app/backend
-      - /app/backend/node_modules
+      - .:/app
+      - /app/node_modules
     environment:
       - NODE_ENV=development
       - PORT=3000
@@ -32,7 +32,7 @@ services:
       - '27017:27017'
     volumes:
       - mongodb_data:/data/db
-      - ./backend/scripts/mongo-init.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      - ./scripts/mongo-init.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=password
